# Intel7_LastDance

./: README.md
Firmware/mp3_player/: CMakeLists.txt
Firmware/mp3_player/src/: mp3_node.cpp  yx6300.cpp
QtCreator/daegamjip/: IkYmir.json  Makefile  camerawidget.cpp  camerawidget.h  daegamjip  daegamjip.pro  daegamjip.pro.user.e8eb5ec  daegamjip_en.qm  daegamjip_en.ts  daegamjip_ko.ts  keyboard.cpp  keyboard.h  keyboard.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_camerawidget.cpp  moc_keyboard.cpp  moc_mainwindow.cpp  moc_numpad.cpp  numpad.cpp  numpad.h  translations.qrc  ui_keyboard.h
QtCreator/dolsoe/: Makefile  dolsoe  dolsoe.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  moc_numpad.cpp  numpad.cpp  numpad.h  numpad.ui  ui_mainwindow.h  ui_numpad.h
Server/: CMakeLists.txt  build.sh
Server/client/: CMakeLists.txt
Server/client/header/: client.h  client_handlers.h  client_protocol.h
Server/client/source/: client.cpp  client_handlers.cpp
Server/server/: CMakeLists.txt
Server/server/header/: server_protocol.h  session.h
Server/server/source/: main.cpp  server.cpp  server_handlers.cpp
dolsoe/client/source/: main.cpp
dolsoe/server/header/: server.h  server_handlers.h
mp3_player/: package.xml
mp3_player/launch/: mp3.launch
